# CodeWeave

./: .env.example  .pre-commit-config.yaml  LICENSE  PROJECT_SETUP.md  README.md  STAGE_1_COMPLETION.md  STAGE_2_COMPLETION.md  TASK_1_1_COMPLETION.md  TASK_1_2_COMPLETION.md  TASK_1_3_COMPLETION.md  TASK_2_3_COMPLETION.md  alembic.ini  docker-compose.yml  pyproject.toml  run_environment_validation.bat  run_validation.bat  simple_validate.py  validate_environment.py  validate_structure.py
alembic/: env.py
alembic/versions/: 20250108_000001_initial_schema.py
config/grafana/provisioning/dashboards/: dashboards.yml
config/grafana/provisioning/datasources/: datasources.yml
config/loki/: loki-config.yml
config/prometheus/: prometheus.yml
config/temporal/: development-sql.yaml
scripts/: init-db.sql  start-dev.bat  start-dev.sh  stop-dev.bat  stop-dev.sh  switch-deployment.py
src/workflow_platform/: __init__.py
src/workflow_platform/api/: __init__.py  dependencies.py  main.py  schemas.py
src/workflow_platform/api/routes/: __init__.py  auth.py  executions.py  workflows.py
src/workflow_platform/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
src/workflow_platform/database/: __init__.py  adapters.py  factory.py  models.py  postgresql_adapter.py  schemas.py  supabase_adapter.py
src/workflow_platform/integrations/: __init__.py
src/workflow_platform/utils/: __init__.py
src/workflow_platform/workers/: __init__.py
supabase/: config.toml
supabase/migrations/: 20250108000001_initial_schema.sql
tests/: __init__.py  conftest.py  test_auth_system.py  test_database_adapters.py  test_database_models.py  test_development_environment.py  test_execution_api.py  test_project_structure.py
